@@ -1,3 +1,9 @@
+2014-02-25  gepr  <gepr@tempusdictum.com>
+
+	* projects.html: Port content from old site.
+
+	* Move old furmwww to old-furmwww.  Import new furmwww.
+
 2012-06-27  gepr  <gepr@tempusdictum.com>
 
 	* index.html: Add anchors to remaining articles.  Remove online-only complexity article.
